# HelloTinyTalk

./: .gitignore  GUIDE.md  HelloTinyTalk-1  __init__.py  ast_nodes.py  chain_typechecker.py  cli.py  dataframe.py  debugger.py  errors.py  help_system.py  js_transpiler.py  kernel.py  lexer.py  lsp_server.py  package_manager.py  parser.py  pyproject.toml  python_interop.py  runtime.py  server.py  sql_transpiler.py  stats.py  stdlib.py  stress_test.py  testing  transpiler.py  tt_types.py  typechecker.py  vercel.json  wasm_transpiler.py
TinyTalkIDE/TinyTalkIDE/: CodeEditorView.swift  ContentView.swift  ExamplePrograms.swift  IDEState.swift  OutputPanelView.swift  StatusBarView.swift  SyntaxHighlighter.swift  Theme.swift  TinyTalkAPI.swift  TinyTalkIDEApp.swift  TinyTalkLexer.swift  ToolbarView.swift
TinyTalkIDE/TinyTalkIDE.xcodeproj/: project.pbxproj
api/: index.py
editors/tree-sitter-tinytalk/: grammar.js
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: tinytalk.tmLanguage.json
examples/: charts_intro.tt  dashboard.tt  data_analysis.tt  data_pipeline.tt  hello.tt  histogram.tt  scatter_plot.tt  statistics.tt  step_chains.tt
static/: index.html  rstudio.html
static/blueprinting/: index.html
static/blueprinting/css/: app.css
static/blueprinting/js/: app.js  canvas.js  (+2 more)
static/css/: ide.css  rstudio.css
static/data/: lessons.json
static/js/: ide.js  lessons.js  rstudio.js  tinytalk.completion.js  tinytalk.monarch.js
tests/: test_core.py  test_reshape.py  test_roadmap.py  test_transpiler.py  test_wasm_transpiler.py
(+1 files in other folders)
