[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "newTinyTalk"
version = "2.0.0"
description = "A Smalltalk-inspired programming language - ergonomic, human-readable, deploy-ready."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tinytalk = "newTinyTalk.cli:main"

[tool.setuptools]
py-modules = []
packages = []
